classDiagram
    direction LR

    class DataStore {
      +Landlord CurrentLandlord
      +List~Tenant~ Tenants
      +List~Property~ Properties
      +List~LeaseAgreement~ Leases
      +List~Invoice~ Invoices
      +List~Statement~ Statements
      +AddTenant(t: Tenant)
      +GetPropertyById(id)
      +AddInvoice(i: Invoice)
      +GetInvoicesByTenantId(id)
      +AddStatement(s: Statement)
      +GetLatestStatementByTenantId(id)
    }

    class Landlord {
      +string FullName
      +string IdNumber
      +string BankAccount
    }

    class Property {
      <<abstract>>
      +string Id
      +string Address
      +decimal MonthlyRent
      +abstract GetClause2(): string
    }

    class Room {
      +string SharedSpaces
    }

    class House {
      +int Bedrooms
    }

    class Tenant {
      +string FullName
      +string IdNumber
      +string Email
    }

    class LeaseAgreement {
      +Tenant Lessee
      +Property LeasedProperty
      +decimal MonthlyRent
      +string GenerateDocumentHtml(Landlord)
    }

    class FinancialTransaction {
      <<abstract>>
      +string Id
      +DateTime Date
      +decimal Amount
      +abstract CalculateTotal(): decimal
    }

    class LineItem {
      +string Description
      +decimal UnitPrice
      +int Quantity
      +decimal Total
    }

    class PaymentStatus {
      <<enumeration>>
      Pending
      Paid
      Overdue
      PartiallyPaid
      Cancelled
    }

    class Invoice {
      +string LeaseId
      +string TenantId
      +string TenantName
      +string PropertyAddress
      +List~LineItem~ Items
      +PaymentStatus Status
      +DateTime DueDate
      +decimal CalculateTotal()
      +MarkAsPaid(paidDate)
      +MarkAsOverdue()
      +Cancel()
    }

    class Statement {
      +string TenantId
      +string TenantName
      +DateTime PeriodStart
      +DateTime PeriodEnd
      +List~Invoice~ Invoices
      +decimal OpeningBalance
      +decimal TotalBilled
      +decimal TotalPaid
      +decimal ClosingBalance
      +decimal CalculateTotal()
      +decimal CalculateBalance()
    }

    class PropertyManager {
      -DataStore store
      -AIPropertyAgent aiAgent
      +RegisterNewTenantAsync(fullName)
      +CreateLeaseAsync(tenantId, propertyId)
      +GetPricingRecommendationAsync(propertyId)
      +GetMaintenancePredictionAsync(propertyId)
      +RunVirtualTourInspectionAsync(propertyId)
      +IssueInvoiceAsync(leaseId)
      +GenerateStatementAsync(tenantId)
    }

    class AIConfiguration {
      +string Region
      +string ProjectId
      +string PanguModelId
      +bool IsEnabled
      +CreateDemo(): AIConfiguration
    }

    class HuaweiAIService {
      -AIConfiguration config
      +GetAuthTokenAsync(): string
      +GenerateTextAsync(prompt): string
      +PredictAsync(modelId, features): Dictionary
    }

    class AIPropertyAgent {
      -HuaweiAIService aiService
      -DataStore dataStore
      +ScreenTenantAsync(tenant): TenantScreeningResult
      +RecommendRentalPriceAsync(property): RentalPricingRecommendation
      +PredictMaintenanceAsync(property): MaintenancePrediction
      +GenerateLeaseClauseAsync(property, tenant, clauseType): string
      +AnalyseVirtualTourAsync(tour, property): InspectionReport
      +RunPortfolioAnalysisAsync(): List~AIInsight~
    }

    class AIInsight {
      +InsightCategory Category
      +string Title
      +double ConfidenceScore
    }

    class VirtualTour {
      +string Id
      +string PropertyId
      +List~RoomPanorama~ Rooms
      +InspectionReport Inspection
    }

    class RoomPanorama {
      +string RoomName
      +string PanoramaUrl
      +string Description
    }

    class InspectionReport {
      +string OverallCondition
      +double ConditionScore
      +List~InspectionFinding~ Findings
      +decimal EstimatedRepairCost
    }

    class InspectionFinding {
      +string Room
      +string Issue
      +string Severity
      +decimal EstimatedCost
    }

    DataStore "1" -- "1" Landlord : manages
    DataStore "1" -- "0..*" Tenant : manages
    DataStore "1" -- "0..*" Property : manages
    DataStore "1" -- "0..*" VirtualTour : manages
    DataStore "1" -- "0..*" Invoice : stores
    DataStore "1" -- "0..*" Statement : stores
    Property <|-- Room
    Property <|-- House
    LeaseAgreement "1" -- "1" Tenant : has
    LeaseAgreement "1" -- "1" Property : has
    VirtualTour "1" -- "1" Property : for
    VirtualTour "1" -- "0..*" RoomPanorama : contains
    VirtualTour "0..1" -- "1" InspectionReport : has
    InspectionReport "1" -- "0..*" InspectionFinding : details
    PropertyManager "1" -- "1" DataStore : uses
    PropertyManager "1" -- "1" AIPropertyAgent : uses
    AIPropertyAgent "1" -- "1" HuaweiAIService : uses
    AIPropertyAgent "1" -- "1" DataStore : reads
    HuaweiAIService "1" -- "1" AIConfiguration : configured-by
    FinancialTransaction <|-- Invoice
    FinancialTransaction <|-- Statement
    Invoice "1" -- "0..*" LineItem : contains
    Invoice "1" -- "1" PaymentStatus : has
    Invoice "1" -- "1" Tenant : billed-to
    Statement "1" -- "0..*" Invoice : summarises
